--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nashkevich.github.io/glasses_site/",
+  "homepage": "https://nashkevich.github.io/glasses__site/",
   "name": "my-react-app",
   "private": true,
   "version": "0.0.0",
